html images lab

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+    src="https://rb.gy/zs1f3d"
+    />
+    <img
+    src="https://rb.gy/cmuk0n"
+    alt="kawasaki ninja "
+    />
+    <img
+    src="https://rb.gy/k6pz89"
+    alt="kawasaki ninja h2r"
+    title="kawasaki ninja"
+    />
   </body>
 </html>
